# 3.projekt

./: .gitignore  CMakeLists.txt  FFT.cpp  README.md  copy.txt  rb3_node_cpp.cpp  start.sh
3bitRobot/: CMakeLists.txt
3bitRobot/include/: FFT.h  PortAudioClass.h  drive.h  rb3_cpp_publisher.h
3bitRobot/src/: FFT.cpp
4bitPC/: CommandGenerator.h  FFT.cpp  PortAudioClass.cpp  PortAudioClass.h  RouteUI.cpp  RouteUI.h  main.cpp  playAudio.cpp  playAudio.h
4bitPC test/: FFT.cpp  PortAudioClass.cpp  main.cpp
4bitPCtest/: CommandGenerator.h  FFT.cpp  FFT.h  PortAudioClass.h  main.cpp  playAudio.cpp
4bitRobot/: CMakeCache.txt  CMakeLists.txt  FFT.cpp  FFT.h  FFT.mlx  Makefile  MessageInterpret.cpp  MessageInterpret.h  cmake_install.cmake  drive.cpp  drive.h  main.cpp  playAudio.cpp  playAudio.h  rb3_cpp_publisher.h  rb3_node_cpp  robot.hpp
4bitRobot/include/: FFT.h  MessageInterpret.h  PortAudioClass.h  drive.h  playAudio.h  rb3_cpp_publisher.h
4bitRobot/src/: FFT.cpp  MessageInterpret.cpp  PortAudioClass.cpp  drive.cpp  main.cpp  playAudio.cpp
4bitRobotTest/include/: FFT.h  drive.h  rb3_cpp_publisher.h
4bitRobotTest/src/: FFT.cpp  MessageInterpret.cpp  (+3 more)
AfstedMedDig/: CMakeLists.txt  detDerVarPåBennedikte.cpp  drive.cpp  drive.h  rb3_cpp_publisher.h  robFrem.cpp
Classy/: FFT.cpp  FFT.h  class2.hpp  main.cpp
FFT/: Makefile  main  main.cpp
FFTLooped/: main.cpp
LauritsLyd/: CommandGenerator.h  FFT.cpp  Makefile  PortAudioClass.cpp  RouteUI.cpp  RouteUI.h  main.cpp  play.cpp  playAudio.cpp  playAudio.h
afspil/: Makefile  main  main.cpp  main.d  sound.cpp  sound.d  sound.h
backup/: rb3_node_cpp.cpp
code_decode/: Makefile  main.cpp
distanceTest/: CommandGenerator.h  PortAudioClass.cpp  RouteUI.cpp  main.cpp
lyt/: fft.csv  main.cpp
(+4 files in other folders)
